# sound_lib

./: .gitignore  .hgignore  .readthedocs.yml  LICENSE  MANIFEST.in  __init__.py  __main__.py  bass.chm  channel.py  input.py  main.py  module_path.py  output.py  pybass.py  pyproject.toml  recording.py  requirements.txt  setup.py  stream.py  update_bass_libs.py
.claude/commands/: add-missing-bass-functions.md
.github/: README.md
.github/workflows/: publish-to-pypi.yml  release.yml
bass_docs/: bass_fx.chm  bassalac.chm  bassenc.chm  bassflac.chm  bassmidi.chm  bassmix.chm  bassopus.chm
bass_updater/: __init__.py  config.py  downloader.py  exceptions.py  extractor.py  file_manager.py  logging_config.py  updater.py  version_parser.py  version_tracker.py
docs/: api.rst  conf.py  index.rst  install.rst  intro.rst  quickstart.rst
lib/: libbass.dylib
sound_lib/: __init__.py  channel.py  config.py  effects.py  encoder.py  input.py  listener.py  main.py  music.py  output.py  pybass.py  recording.py  stream.py
sound_lib/effects/: __init__.py  bass.py  bass_fx.py  effect.py  tempo.py
tests/: test_file_manager.py  test_new_stream_functions.py  test_version_parser.py  test_version_tracker.py
